styles.css
:root {
  --primary: #3d3d3d;
  --primary85: rgba(61, 61, 61, .85);
  --primary65: rgba(61, 61, 61, .65);
  --primary45: rgba(61, 61, 61, .45);
  --primary25: rgba(61, 61, 61, .25);
  --primary15: rgba(61, 61, 61, .15);
  --background: #f7f7f7;
  --highlight: RGBA(189, 224, 252, 1);
}
* {
  box-sizing: border-box;
}
html {
  display: flex;
  flex-direction: column;
  align-items: center;
  margin: 0;
}
body {
  background-color: var(--background);
  color: var(--primary);
  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen, Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
  font-size: 1.25rem;
  font-weight: 300;
  line-height: 1.4;
  margin: 15px 15px 60px 15px;
  position: relative;
}
@media (min-width:790px) {
  body {
    margin: 40px 40px 60px 40px;
    width: 715px;
  }
}
h1 {
  font-size: 48px;
}
h1, h2, h3, h4 {
  letter-spacing: -.01em;
  line-height: 0.95;
  margin-top: 50px;
  margin-bottom: 0;
}
h3, h4 {
  margin-top: 30px;
}
body li {
  margin-bottom: 0;
}
::selection {
  background-color: var(--highlight);
}
#headshot {
  border-radius: 100px;
  margin: 15px 0 10px 0;
  width: 90px;
  border: 1px solid var(--primary);
}
@media (min-width:790px) {
  #headshot {
    position: absolute;
    right: 0px;
    top: -15px;
  }
}

ul {
  list-style-type: circle;
}
ul li, ol li {
  margin: 15px 0;
}
ul.link-list li {
  display: inline-block;
  list-style: none;
  margin-right: 15px;
}
ul.link-list {
  padding: 0;
}
nav.breadcrumbs ul li:not(:last-child)::after {
  content: "›";
  margin-left: 15px;
}
nav.breadcrumbs {
  text-align: center;
}
nav.primary-navigation {
  /* border: 1px solid var(--primary15); */
}

body nav:last-of-type:not(:first-of-type) {
  margin-top: 90px;
}

a, a:visited {
  background-repeat: no-repeat;
  background-size: 0 100%;
  fill: inherit;
  text-decoration: underline;
  /* text-decoration-thickness: 2px; */
  transition: all .2s ease-in-out;
}
a, a:active, a:hover, a:visited {
  color: inherit;
  background-image: linear-gradient(180deg, transparent 50%, var(--highlight) 0)
}
a:active, a:hover {
  background-size: 100% 100%
}
a.continue {

}
a.continue::after {
  content: "  →";
}

.writing-image {
  margin: 1.25em 0;
}
.writing-image img {
  width: 100%;
}
figcaption, time {
  font-size: 1rem;
  font-weight: 300;
  text-align: center;
  margin-top: -5px;
}

aside {
  margin: 40px 0px;
  color: var(--primary85);
  border-left: 8px solid var(--primary45);
  padding-left: 20px;
  position: relative;
}
aside::before {
  background-color: var(--background);
  color: var(--primary45);
  content: "as an aside";
  text-transform:uppercase;
  font-size: 0.7em;
  font-weight: 600;
  left: -13px;
  padding: 7px 0;
  margin-top: 30px;
  position: absolute;
  writing-mode: vertical-lr;
}
aside.disclaimer::before {
  content: "disclaimer";
}
@media (min-width:790px) {
  aside  {
    margin: 40px 0px 40px 10px;
  }
}
iframe {
  margin: 20px 0;
  border: none;
}
code {
  background: var(--primary15);
  border-radius: 5px;
  padding: 0px 3px;

}
/*
.label.label-beta::before {
  content: "Now available for friends to try";
  position: absolute;
  display: inline;
  font-size: 12px;
  top: 25px;
  border: 1px solid var(--primary25);
  color: var(--primary85);
  border-radius: 3px;
  padding: 2px 4px;
} */

